# RobotControl

./: .gitignore  CMakeLists.txt  README.md  RobotControl.pro  main.cpp
qml/RobotControl/: main.qml
src/: controller.cpp  controller.h  main.cpp  main.qml  prconnection.cpp  prconnection.h  qml.qrc
src/qml/: controlpanel.qml
src_old/: main.qml  prconnection.cpp
